--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Time Weather</title>
-    <link href="/style.css" rel="stylesheet" >
+    <link rel="stylesheet" href="./style.css" >
 </head>
 <body>
     <div class="weather">
